Implement Bitcoin reports
Implement Telegram markdown Bitcoin report
Implement JSON API Bitcoin report

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,6 +13,7 @@ exchange.bank.ru=Source — CBR. Currency: `%s`.
 exchange.bank.ua=Source — NBU. Currency: `%s`.
 exchange.bank.by=Source — NB RB. Currency: `%s`.
 exchange.bank.kz=Source — NBK. Currency: `%s`.
+exchange.bitcoin=Source — BitPay. Currency: `%s`.
 exchange.metal.ru.header=Prices for 1 gram on %s:
 exchange.metal.ru.gold=Au:
 exchange.metal.ru.silver=Ag:
