--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -13,6 +13,7 @@ exchange.bank.ru=Источник — ЦБ РФ. Валюта: `%s`.
 exchange.bank.ua=Источник — НБУ. Валюта: `%s`.
 exchange.bank.by=Источник — НБ РБ. Валюта: `%s`.
 exchange.bank.kz=Источник — НБК. Валюта: `%s`.
+exchange.bitcoin=Источник — BitPay. Валюта: `%s`.
 exchange.metal.ru.header=Цены за 1 грамм на %s:
 exchange.metal.ru.gold=Au:
 exchange.metal.ru.silver=Ag:
