Separate MotoFan.Ru user birthdays from greetings setting

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -167,6 +167,7 @@ Please choose `/debug` command with argument:\n\
 /debug VFlat — Send apartment suggestions.\n\
 /debug BLogUpdates — Show updates in system log.\n\
 /debug BGreetings — Disable greetings.\n\
+/debug BBirthday — Disable sending birthdays.\n\
 /debug BSilent — Disable sending all events to chat.
 bot.command.debug.variable=Variable `%s` set to `%b`.
 bot.command.debug.data=_Data updated!_
@@ -569,6 +570,8 @@ and send them to subscribers, if any.<br/>\
 — Change the global settings of outputting Telegram chats updates to the server logs.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BGreetings</strong> \
 — Change the global settings of bot greetings for new and left chat users.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BBirthday</strong> \
+— Change the global settings of sending MotoFan.Ru user birthdays globally.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BSilent</strong> \
 — Change the global settings of outputting any bot messages to any Telegram chats.</div>
 site.help.command.info=&bull; <strong class="help-command">/info</strong> \
