Use 2 minutes for update MotoFan.ru posts instead of 20

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -588,7 +588,7 @@ site.help.other=\
 &bull; <strong class="help-argument">bot.avatars.update</strong> \
 — Сервис обновления аватаров пользователей, обновление происходит в 04:00 каждый день.<br/>\
 &bull; <strong class="help-argument">bot.motofan.receiver</strong> \
-— Сервис получения новых сообщений с форума MotoFan.Ru, каждые 20 минут производится проверка на новые сообщения.<br/>\
+— Сервис получения новых сообщений с форума MotoFan.Ru, каждые 2 минуты производится проверка на новые сообщения.<br/>\
 &bull; <strong class="help-argument">bot.motofan.birthday</strong> \
 — Сервис отправки случайной фразы с добрым утром и дней рождений пользователей форума в Telegram-чат MotoFan.Ru, \
 отчёт отправляется в 07:00 каждый день.<br/>\
