Add button captcha option

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -168,6 +168,7 @@ Please choose `/debug` command with argument:\n\
 /debug BLogUpdates — Show updates in system log.\n\
 /debug BGreetings — Disable greetings.\n\
 /debug BBirthday — Disable sending birthdays.\n\
+/debug BCaptcha — Disable using CAPTCHA.\n\
 /debug BSilent — Disable sending all events to chat.
 bot.command.debug.variable=Variable `%s` set to `%b`.
 bot.command.debug.data=_Data updated!_
@@ -572,6 +573,8 @@ and send them to subscribers, if any.<br/>\
 — Change the global settings of bot greetings for new and left chat users.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BBirthday</strong> \
 — Change the global settings of sending MotoFan.Ru user birthdays globally.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BCaptcha</strong> \
+— Change the global settings of using button CAPTCHA in chat for new users.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BSilent</strong> \
 — Change the global settings of outputting any bot messages to any Telegram chats.</div>
 site.help.command.info=&bull; <strong class="help-command">/info</strong> \
