--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -168,6 +168,7 @@ bot.command.debug.help=\
 /debug BLogUpdates — Выводить updates в лог.\n\
 /debug BGreetings — Отключить приветствия.\n\
 /debug BBirthday — Отключить отправку дней рождения.\n\
+/debug BCaptcha — Отключить использование CAPTCHA.\n\
 /debug BSilent — Отключить отправку всех событий в чат.
 bot.command.debug.variable=Переменная `%s` установлена в значение `%b`.
 bot.command.debug.data=_Данные обновлены!_
@@ -572,6 +573,8 @@ site.help.command.debug.desc=\
 — Изменение глобальной настройки приветствий бота на новых и покинувших чат пользователей.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BBirthday</strong> \
 — Изменение глобальной настройки отправки дней рождения пользователей форума MotoFan.Ru.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BCaptcha</strong> \
+— Изменение глобальной настройки использования CAPTCHA для новых пользователей.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BSilent</strong> \
 — Изменение глобальной настройки вывода любых сообщений бота в любые Telegram-чаты.</div>
 site.help.command.info=&bull; <strong class="help-command">/info</strong> \
