Add markdown output for additional quotes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,6 +25,14 @@ exchange.bank.by.button=🇧🇾
 exchange.bank.kz.button=🇰🇿
 exchange.metal.ru.button=🤘
 exchange.bitcoin.button=🤑
+exchange.aliexpress.header=AliExpress `1 USD` rate:
+exchange.rbc.header=Today's RBC quotes, %s:
+exchange.rbc.usd.cash=Csh.USD:
+exchange.rbc.eur.cash=Csh.EUR:
+exchange.rbc.usd.exch=Exc.USD:
+exchange.rbc.eur.exch=Exc.EUR:
+exchange.rbc.usd.eur=EUR/USD:
+exchange.rbc.usd.btc=BTC/USD:
 
 bot.warn.send.long=[text is cropped]
 bot.error.send.message=Cannot send message `%s` into `%d` chat, error:\n```\n%s\n```
