--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -25,6 +25,14 @@ exchange.bank.by.button=🇧🇾
 exchange.bank.kz.button=🇰🇿
 exchange.metal.ru.button=🤘
 exchange.bitcoin.button=🤑
+exchange.aliexpress.header=Курс `1 USD` на AliExpress:
+exchange.rbc.header=Сводка РБК на сегодня, %s:
+exchange.rbc.usd.cash=Нал.USD:
+exchange.rbc.eur.cash=Нал.EUR:
+exchange.rbc.usd.exch=Бир.USD:
+exchange.rbc.eur.exch=Бир.EUR:
+exchange.rbc.usd.eur=EUR/USD:
+exchange.rbc.usd.btc=BTC/USD:
 
 bot.warn.send.long=[текст обрезан]
 bot.error.send.message=Не могу отправить сообщение `%s` в чат `%d`, ошибка:\n```\n%s\n```
