Add proper logic for CAPTCHA buttons

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -85,7 +85,7 @@ bot.inline.greeting.off=✅ Greetings in chat is disabled.
 bot.inline.pager.page=You have selected a page:
 bot.inline.captcha.solved=✅ Congratulations!
 bot.inline.captcha.failed=❌ Wrong answer!
-bot.inline.captcha.wrong=❌ You aren't %s user!
+bot.inline.captcha.wrong=❌ You aren't joined user!
 bot.pager.right=>
 bot.pager.left=<
 bot.pager.right.last=>>
