Add CAPTCHA configuration and polish code

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -83,9 +83,9 @@ bot.inline.subscribe.unsubscribed=✅ Подписка отменена.
 bot.inline.greeting.on=✅ Приветствия в группе включены.
 bot.inline.greeting.off=✅ Приветствия в группе выключены.
 bot.inline.pager.page=Вы выбрали страницу:
-bot.inline.captcha.solved=✅ Успех!
-bot.inline.captcha.failed=❌ Неправильно!
-bot.inline.captcha.wrong=❌ Вы не вошедший пользователь!
+bot.inline.captcha.solved=✅ Правильный ответ!
+bot.inline.captcha.failed=❌ Неправильный ответ!
+bot.inline.captcha.wrong=❌ Ошибка доступа!
 bot.pager.right=>
 bot.pager.left=<
 bot.pager.right.last=>>
@@ -239,7 +239,9 @@ bot.morning=\
 Какое прекрасное солнечное утро! ☕\n\
 Бррр… Что за ужасная бессонная ночка… 😞 ☕\n\
 Доброго утра! ☕
-bot.captcha.question=Система анти-спам: Нажмите кнопку "E398".
+bot.captcha.question=\
+<b><i>Сообщение системы борьбы со спамом!</i></b>\n\n\
+Пожалуйста нажмите кнопку <b>E398</b> внизу.\n\nPlease push the <b>E398</b> button below.
 bot.captcha.button1=C650
 bot.captcha.button2=E398
 bot.captcha.button3=V500
