--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -83,9 +83,9 @@ bot.inline.subscribe.unsubscribed=✅ Chat Unsubscribed.
 bot.inline.greeting.on=✅ Greetings in chat is enabled.
 bot.inline.greeting.off=✅ Greetings in chat is disabled.
 bot.inline.pager.page=You have selected a page:
-bot.inline.captcha.solved=✅ Congratulations!
-bot.inline.captcha.failed=❌ Wrong answer!
-bot.inline.captcha.wrong=❌ You aren't joined user!
+bot.inline.captcha.solved=✅ Correct answer!
+bot.inline.captcha.failed=❌ Incorrect answer!
+bot.inline.captcha.wrong=❌ Access error!
 bot.pager.right=>
 bot.pager.left=<
 bot.pager.right.last=>>
@@ -239,7 +239,9 @@ Have you already made aromatic coffee? ☕\n\
 What a beautiful sunny morning! ☕\n\
 Huh… What a terrible sleepless night… 😞 ☕\n\
 Good morning! ☕
-bot.captcha.question=Antispam System: Push "E398" button.
+bot.captcha.question=\
+<b><i>Anti-spam system message!</i></b>\n\n\
+Please push the <b>E398</b> button below.
 bot.captcha.button1=C650
 bot.captcha.button2=E398
 bot.captcha.button3=V500
