Fix cleaning and logging CAPTCHA HashMap
Edit CAPTCHA message

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -249,7 +249,8 @@ Huh… What a terrible sleepless night… 😞 ☕\n\
 Good morning! ☕
 bot.captcha.question=\
 <b><i>Anti-spam system message!</i></b>\n\n\
-Please push the <b>E398</b> button below.
+Please push the <b>E398</b> button below.\n\n\
+Problems accessing the chat? Contact: @exlmoto.
 bot.captcha.button1=C650
 bot.captcha.button2=E398
 bot.captcha.button3=V500
