--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -249,7 +249,8 @@ bot.morning=\
 Доброго утра! ☕
 bot.captcha.question=\
 <b><i>Сообщение системы борьбы со спамом!</i></b>\n\n\
-Пожалуйста нажмите кнопку <b>E398</b> внизу.\n\nPlease push the <b>E398</b> button below.
+Пожалуйста нажмите кнопку <b>E398</b> внизу.\nPlease push the <b>E398</b> button below.\n\n\
+Проблемы с доступом в чат? Contact: @exlmoto.
 bot.captcha.button1=C650
 bot.captcha.button2=E398
 bot.captcha.button3=V500
