Change CAPTCHA description

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -249,8 +249,9 @@ bot.morning=\
 Доброго утра! ☕
 bot.captcha.question=\
 <b><i>Сообщение системы борьбы со спамом!</i></b>\n\n\
-Пожалуйста нажмите кнопку <b>E398</b> внизу.\nPlease push the <b>E398</b> button below.\n\n\
-Проблемы с доступом в чат? Contact: @exlmoto.
+Пожалуйста ответьте на вопрос в течении <b>%d</b> секунд.\n\n\
+Какой телефон Motorola на фото?\nWhich Motorola phone is in the image?\n\n\
+Проблемы с доступом в чат?\nContact: @exlmoto.
 bot.captcha.button1=C650
 bot.captcha.button2=E398
 bot.captcha.button3=V500
