--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -249,8 +249,9 @@ Huh… What a terrible sleepless night… 😞 ☕\n\
 Good morning! ☕
 bot.captcha.question=\
 <b><i>Anti-spam system message!</i></b>\n\n\
-Please push the <b>E398</b> button below.\n\n\
-Problems accessing the chat? Contact: @exlmoto.
+Please answer the question within <b>%d</b> seconds.\n\n\
+Which Motorola phone is in the image?\n\n\
+Problems accessing the chat?\nContact: @exlmoto.
 bot.captcha.button1=C650
 bot.captcha.button2=E398
 bot.captcha.button3=V500
