Trigger CAPTCHA only when bot is chat admin
Fix language strings

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -93,7 +93,7 @@ bot.inline.greeting.off=✅ Greetings in chat is disabled.
 bot.inline.pager.page=You have selected a page:
 bot.inline.captcha.solved=✅ Correct answer!
 bot.inline.captcha.failed=❌ Incorrect answer!
-bot.inline.captcha.wrong=❌ Access error!
+bot.inline.captcha.wrong=❌ You cannot answer for another user!
 bot.pager.right=>
 bot.pager.left=<
 bot.pager.right.last=>>
