Fix grammatical errors

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -249,8 +249,8 @@ bot.morning=\
 Доброго утра! ☕
 bot.captcha.question=\
 <b><i>Сообщение системы борьбы со спамом!</i></b>\n\n\
-Пожалуйста ответьте на вопрос в течении <b>%d</b> секунд.\n\n\
-Какой телефон Motorola на фото?\nWhich Motorola phone is in the image?\n\n\
+Пожалуйста ответьте на вопрос в течение <b>%d</b> секунд.\n\n\
+Какой телефон Motorola на фото?\nWhat Motorola phone is this?\n\n\
 Проблемы с доступом в чат?\nContact: @exlmoto.
 bot.captcha.button1=C650
 bot.captcha.button2=E398
