--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -250,7 +250,7 @@ Good morning! ☕
 bot.captcha.question=\
 <b><i>Anti-spam system message!</i></b>\n\n\
 Please answer the question within <b>%d</b> seconds.\n\n\
-Which Motorola phone is in the image?\n\n\
+What Motorola phone is this?\n\n\
 Problems accessing the chat?\nContact: @exlmoto.
 bot.captcha.button1=C650
 bot.captcha.button2=E398
