Fix avatar update service

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -608,7 +608,7 @@ List of working services (time is presented by in 24-hour format and MSK time zo
 &bull; <strong class="help-argument">bot.callbacks.clear</strong> \
 — Inline-stack cleaning service, cleaning occurs at 03:00 every day.<br/>\
 &bull; <strong class="help-argument">bot.avatars.update</strong> \
-— User avatars update service, update occurs at 04:00 every day.<br/>\
+— User avatars update service, update occurs at 04:00, 12:00, and 19:00 three times a day.<br/>\
 &bull; <strong class="help-argument">bot.motofan.receiver</strong> \
 — Service for receiving new posts from the MotoFan.Ru forum, check for new messages is performed every 2 minutes.<br/>\
 &bull; <strong class="help-argument">bot.motofan.birthday</strong> \
