--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -608,7 +608,7 @@ site.help.other=\
 &bull; <strong class="help-argument">bot.callbacks.clear</strong> \
 — Сервис очистки inline-стека, очистка происходит в 03:00 каждый день.<br/>\
 &bull; <strong class="help-argument">bot.avatars.update</strong> \
-— Сервис обновления аватаров пользователей, обновление происходит в 04:00 каждый день.<br/>\
+— Сервис обновления аватаров пользователей, обновление происходит в 04:00, 12:00 и 19:00 трижды в день.<br/>\
 &bull; <strong class="help-argument">bot.motofan.receiver</strong> \
 — Сервис получения новых сообщений с форума MotoFan.Ru, каждые 2 минуты производится проверка на новые сообщения.<br/>\
 &bull; <strong class="help-argument">bot.motofan.birthday</strong> \
