Fix RBC quotes output

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,7 +26,7 @@ exchange.bank.kz.button=🇰🇿
 exchange.metal.ru.button=🤘
 exchange.bitcoin.button=🤑
 exchange.aliexpress.header=AliExpress `1 USD` rate:
-exchange.rbc.header=Today's RBC quotes, %s:
+exchange.rbc.header=RBC quotes on %s:
 exchange.rbc.usd.cash=Csh.USD:
 exchange.rbc.eur.cash=Csh.EUR:
 exchange.rbc.usd.exch=Exc.USD:
