--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -26,7 +26,7 @@ exchange.bank.kz.button=🇰🇿
 exchange.metal.ru.button=🤘
 exchange.bitcoin.button=🤑
 exchange.aliexpress.header=Курс `1 USD` на AliExpress:
-exchange.rbc.header=Сводка РБК на сегодня, %s:
+exchange.rbc.header=Сводка РБК на %s:
 exchange.rbc.usd.cash=Нал.USD:
 exchange.rbc.eur.cash=Нал.EUR:
 exchange.rbc.usd.exch=Бир.USD:
