Add user nickname to captcha recognition

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -249,7 +249,7 @@ Huh… What a terrible sleepless night… 😞 ☕\n\
 Good morning! ☕
 bot.captcha.question=\
 <b><i>Anti-spam system message!</i></b>\n\n\
-Please answer the question within <b>%d</b> seconds.\n\n\
+Dear <b>%s</b>!\nPlease answer the question within <b>%d</b> seconds.\n\n\
 What Motorola phone is this?\n\n\
 Problems accessing the chat?\nContact: @exlmoto.
 bot.captcha.button1=C650
