--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -249,7 +249,7 @@ bot.morning=\
 Доброго утра! ☕
 bot.captcha.question=\
 <b><i>Сообщение системы борьбы со спамом!</i></b>\n\n\
-Пожалуйста ответьте на вопрос в течение <b>%d</b> секунд.\n\n\
+Уважаемый <b>%s</b>!\nПожалуйста ответьте на вопрос в течение <b>%d</b> секунд.\n\n\
 Какой телефон Motorola на фото?\nWhat Motorola phone is this?\n\n\
 Проблемы с доступом в чат?\nContact: @exlmoto.
 bot.captcha.button1=C650
