Add SiePatchDB chat support to Captcha

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -249,12 +249,9 @@ Huh… What a terrible sleepless night… 😞 ☕\n\
 Good morning! ☕
 bot.captcha.question=\
 <b><i>Anti-spam system message!</i></b>\n\n\
-Dear <b>%s</b>! Please answer the question within <b>%d</b> seconds.\n\n\
+Dear <b>%s</b>!\nPlease answer the question within <b>%d</b> seconds.\n\n\
 What Motorola phone is this?\n\n\
-Problems accessing the chat?\nContact: @exlmoto.
-bot.captcha.button1=C650
-bot.captcha.button2=E398
-bot.captcha.button3=V500
+Problems accessing the chat?\nContact: %username%.
 
 site.title=MotoFan.Ru news in Telegram group!
 site.og.title=MotoFan.Ru in Telegram group!
