--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -249,12 +249,9 @@ bot.morning=\
 Доброго утра! ☕
 bot.captcha.question=\
 <b><i>Сообщение системы борьбы со спамом!</i></b>\n\n\
-Ув. <b>%s</b>! Пожалуйста ответьте на вопрос в течение <b>%d</b> секунд.\n\n\
+Ув. <b>%s</b>!\nПожалуйста ответьте на вопрос в течение <b>%d</b> секунд.\n\n\
 Какой телефон Motorola на фото?\nWhat Motorola phone is this?\n\n\
-Проблемы с доступом в чат?\nContact: @exlmoto.
-bot.captcha.button1=C650
-bot.captcha.button2=E398
-bot.captcha.button3=V500
+Проблемы с доступом в чат?\nContact: %username%.
 
 site.title=Новости MotoFan.Ru в конференции Telegram!
 site.og.title=MotoFan.Ru в конференции Telegram!
